# dsai-m2-project-world2045

./: .gitignore  Blueprint_World2045.md  CHANGELOG.md  DOOMSDAY_CLOCK_PROJECTION_2045.md  FINAL_ANALYTICAL_FINDINGS.md  LICENSE  README.MD  README.md  TECHNICAL_README.md  WORLD2045_BLUEPRINT_ORIGINAL.md  project_file_structure.txt  pyproject.toml  requirements.txt  world2045.duckdb.wal
dashboard/: DEPLOYMENT_GUIDE.md  README.md
dbt/: dbt_project.yml  profiles.yml
dbt_model_archive/: _disabled__gold__country_trajectory_score_year.sql  _disabled__silver__projection_climate_country_year.sql  _disabled__silver__projection_gdp_country_year.sql
docs/: CHANGELOG.md  WORLD2045_Streamlit_Deployment_Guide.md  WORLD2045_Streamlit_Deployment_Training_Manual.md  WORLD2045_Training_Manual_Data_Analyst.md  ml_forecasting_contract.md  ml_forecasting_methodology.md  ml_forecasting_sprint_2.md  ml_forecasting_sprint_3.md  ml_forecasting_sprint_4.md  ml_model_card_climate_vulnerability.md  world2045_ml_demo_walkthrough.md  world2045_ml_evidence_for_nontechnical_reviewers.md  world2045_ml_upgrade_audit_checklist.md  world2045_ml_upgrade_executive_summary.md  world2045_ml_upgrade_technical_completion.md  world2045_static_vs_ml_results_explained.md
notebook/: WORLD2045_Training_Manual_Data_Analyst.ipynb
scripts/: build_ssp_gdp_projection.py  build_wid_inequality_extract.py  clean_hdi_workbooks.py  extract_vdem.py  ingest_climate_projection_template.py  ingest_ssp_gdp_projection.py  ingest_wpp_projection.py  inspect_projection_source.py  inspect_wpp.py  inspect_wpp_raw_lines.py  (+8 more)
(+119 files in other folders)
